--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,8 @@ services:
   - type: web
     name: chat-api
     env: python
-    buildCommand: ""
+    buildCommand:  "pip install -r requirements.txt"
     startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
     plan: free
+
+    
